--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,27 @@ p {
 
 /* ********** Components ********** */
 
+/* ********** Carousel ********** */
+.carousel {
+  margin: 2rem auto;
+  padding: 2rem 0;
+  max-width: 800px;
+  text-align: center;
+  background-color: var(--carousel-bg-color);
+}
+.carousel input {
+  display: none;
+}
+.carousel label {
+  border: medium solid var(--gray-dark-color);
+  border-radius: 50%;
+  margin: 0 .24rem;
+  display: inline-block;
+  width: .75rem;
+  height: .75rem;
+  cursor: pointer;
+}
+
 /* *************HeroImage********* */
 .hero-image {
   background-image: var(--hero-image);
@@ -204,6 +225,11 @@ p {
 
 /* ********** Utilities ********** */
 
+.avatar {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+}
 .bg-gray-light {
   background-color: var(--gray-light-color);
 }
@@ -244,6 +270,9 @@ p {
   padding: .5rem 1rem;
   text-align: center;
   color: var(--title-color);
+}
+.text-first-color {
+  color: var(--first-color);
 }
 .text-center {
   text-align: center;
@@ -416,7 +445,6 @@ p {
   .services > .container {
     grid-template-columns: repeat(3, 30%);
   }
-
   .services .section-title {
     grid-column: span 3;
   }
