--- a/styles/style.css
+++ b/styles/style.css
@@ -79,12 +79,36 @@ p {
 /* ********** Components ********** */
 
 /* ********** Carousel ********** */
+@keyframes carousel-slide {
+  0%{
+    transform: translateX(0%);
+  }
+  25%{
+    transform: translateX(-25%);
+  }
+  50%{
+    transform: translateX(-50%);
+  }
+  75%{
+    transform: translateX(-75%);
+  }
+}
 .carousel {
   margin: 2rem auto;
   padding: 2rem 0;
   max-width: 800px;
   text-align: center;
   background-color: var(--carousel-bg-color);
+  overflow-x: hidden;
+}
+.carousel .slides {
+  padding-left: 0;
+  /* Per each slide add 100% */
+  width: 400%;
+  display: flex;
+  list-style: none;
+  transition: transform .5s ease-in-out;
+  animation: carousel-slide 12s ease-in-out 3s;
 }
 .carousel input {
   display: none;
@@ -97,6 +121,24 @@ p {
   width: .75rem;
   height: .75rem;
   cursor: pointer;
+}
+#slide-1:checked ~ .slides{
+  transform: translateX(0%);
+}
+#slide-2:checked ~ .slides{
+  transform: translateX(-25%);
+}
+#slide-3:checked ~ .slides{
+  transform: translateX(-50%);
+}
+#slide-4:checked ~ .slides{
+  transform: translateX(-75%);
+}
+#slide-1:checked ~ .slides-nav label#dot-1,
+#slide-2:checked ~ .slides-nav label#dot-2,
+#slide-3:checked ~ .slides-nav label#dot-3,
+#slide-4:checked ~ .slides-nav label#dot-4 {
+  background-color: var(--gray-dark-color);
 }
 
 /* *************HeroImage********* */
@@ -308,6 +350,36 @@ p {
   display: flex;
   justify-content: center;
 }
+.contact-card {
+  margin: 1rem auto;
+  padding: 1rem;
+  width: 100%;
+  height: 144px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-decoration: none;
+}
+.contact-card:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+.contact-card > svg{
+  width: 2rem;
+  height: 2rem;
+  fill: var(--first-color);
+}
+.contact-card > small {
+  margin-top: -1rem;
+}
+.footer {
+  margin-bottom: var(--header-height);
+  padding: .5rem;
+  text-align: center;
+  color: var(--white-color);
+  background-color: var(--third-color);
+}
 .header {
   position: fixed;
   left: 0;
@@ -397,6 +469,11 @@ p {
   fill: var(--first-color);
 }
 @media screen and (min-width: 768px){
+  .contact-cards {
+    display: grid;
+    grid-template-columns: repeat(2,48%);
+    justify-content: space-between;
+  }
   .portfolio > .container {
     display: grid;
     grid-template-columns: repeat(2, 50%);
@@ -429,6 +506,12 @@ p {
     gap: 2rem;
     justify-content: space-between;
     align-content: center;
+  }
+  .contact-cards {
+    grid-template-columns: repeat(4,24%);
+  }
+  .footer {
+    margin-bottom: 0;
   }
   .header {
     position: sticky;
